[UPD] fixed the bug with the scrollbar with firefox

--- a/css/theme.css
+++ b/css/theme.css
@@ -811,6 +811,7 @@ path.chord {
 
 #statDiv {
     background: #dad2b3;
+    min-height: 0;
 }
 
 .middleVert{
